# llm-collab

./: .gitignore  ARCHITECTURE_TRACE.html  BUILD.md  CMakeLists.txt  EMPIRICAL_RESULTS.json  LEADERBOARD.html  ONBOARDING.md  PAPER.html  PAPER_DRAFT.md  README.md  SYNAPSEFLOW_PAPER_MAP.md  references.bib  requirements.txt  setup.py
.claude-plugin/: plugin.json
.claude-plugin/hooks/: brain_engine.py  neuro_hook.py  status_line.py
R/: bayesian_router.R  model_analysis.R
benchmarks/: benchmark_hard.py  benchmark_neuro.py  benchmark_smart.py  benchmark_synapseflow.py  benchmark_test.py
config/: brain_regions.json  llm-config.template.json  synapse_config.json
cpp/: benchmark.cpp  router.h
data/: answer_sheet_template.docx  benchmark_results.md  brain_activity.jsonl  model_rankings.json  research_direction.json  training_data.json  training_log.jsonl
dataset/: boolq_100.json  combined_weights.json  gsm8k_full.json  humaneval.json  icl_router_500.json  icl_router_weights.json  jisi_trained_weights.json  mmlu_100.json  rl_router.npz  router_weights.json  trained_weights.json  training_array.json
dataset/jisi/: jisi_500.json
dataset/math_modeling/: transportation.jsonl
docs/: ALGORITHM_REPORT.html  REFERENCES.md  数学建模国奖指南.html  数学建模国奖指南_v2.html  数学建模国奖指南_v3.html  数学建模技能积累_100面.html  数学建模技能积累_100面_v2.html
engine/: agent.py  api_server.py  brain.py  brainstem.f90  brainstem_cli.f90  brainstem_wrapper.py  contest_mode.py  correct.py  cortex_router.py  deep_router.py  dual_network_runner.py  fep_router.py  fep_unified.py  hd_encode.f90  hook_diag.py  kimi_vision.py  math_router.py  monitor_server.py  native_bridge.py  network_routing.py  neural_mechanisms.py  neuro_agent.py  neuro_runner.py  neuro_synaptic_router.py  paper_search.py  parallel_ops.f90  parallel_ui.py  pareto_fep.py  path_learner.py  policy_network.py  predictive_coding.py  reasoning.py  regions.py  synapse_network.py  synapse_router.py  train_rl_router.py  train_router.py  unified_fep.py
engine/bridge/: __init__.py  engine.py
engine/fortran/: Makefile  brainstem_mpi.f90  mpi_utils.f90
engine/router_cpp/include/: pathway.hpp  router.hpp
engine/router_cpp/src/: bindings.cpp  pathway.cpp  router.cpp  thread_pool.cpp
eval/: benchmark_db.py  benchmark_db_latest.json  benchmark_suite.py  benchmark_v1.py  benchmark_v2.py  benchmark_v3.py  benchmark_vision.py  eval_crossval_20260621_1642.json  eval_hard_kimi.json  eval_latest.json  eval_report_20260621_1611.json  evolved_weights.json  gsm8k_sample.jsonl  leaderboard_result.json  leaderboard_run.py  lmsys_elo_estimate.json  lmsys_style.py  neuro_benchmark_result.json  orbit_benchmark_result.json  run_leaderboard.py  submit_orbit.py  synapseflow_benchmark.json  weight_tuner.py
eval/results/: benchmark_20260622_202141.json  full_nolimit.json  gpqa_bbh_ifeval_mmlupro.json  hf_leaderboard.json  leaderboard.json  real_eval.json
java/: Router.java
javascript/: router.js
math_modeling_dataset/: README.md  metadata.json
math_modeling_dataset/scripts/: generate.py
papers/frontier/: frontier_papers.json
papers/nature/: nature_papers.json
partitions/: RANKINGS.md  README.md
partitions/chinese_knowledge/: training_data.json
partitions/code_gen/: training_data.json
partitions/db_design/: training_data.json
partitions/logic_reasoning/: training_data.json
partitions/math_modeling/: training_data.json
training/: README.md  prepare_data.py  train_expert.py
training/configs/: ds_zero2.json
training/data/: code_expert_train.json  math_expert_train.json
ui/: dashboard.html
